--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Career Guidance</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header></header>
+    <header class="header">
+      <nav>
+        <a href="#" class="logo">CAREER GUIDANCE</a>
+        <a href="#" class="header-menu">
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
+        </a>
+        <form class="search">
+          <input type="text" name="search" placeholder="Search course..." />
+          <button class="search__btn">
+            <img src="/asset/ei_search.svg" alt="search icon" />
+          </button>
+        </form>
+
+        <ul class="menu-list">
+          <li class="menu-list__item"><a href="#">About</a></li>
+          <li class="menu-list__item"><a href="#">Results</a></li>
+          <li class="menu-list__item"><a href="#">Careers</a></li>
+          <li class="menu-list__item btn"><a href="#">Take test</a></li>
+        </ol>
+      </nav>
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
