--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <nav>
         <a href="#" class="logo">CAREER GUIDANCE</a>
         <a href="#" class="header-menu">
@@ -32,6 +32,31 @@
         </ol>
       </nav>
     </header>
+    <section class="hero-section container">
+      <div class="hero-section__content">
+        <h1 class="hero-section__h1">Are you a final year student?</h1>
+        <p>We know the pressure to succeed is intense, so we are here to 
+          alleivate some of that pressure by helping you choose a career 
+          path suited for you</p>
+      </div>
+      <div class="hero-section__images">
+        <div class="question-image">
+          <img src="/asset/mockups/mockup-question.svg" alt="question and radio buttons answer mockup design"/>
+        </div>
+        <div class="personality-type-1">
+          <img src="/asset/mockups/mockup-personality-type-1.svg" alt="The logician personality type card">
+        </div>
+        <div class="personality-type-2">
+          <img src="/asset/mockups/mockup-personality-type-2.svg" alt="The architect personality type card">
+        </div>
+        <div class="mechatronics course">
+          <img src="/asset/mockups/mockup-mechatronics.svg" alt="Mechatronics career card mockup">
+        </div>
+        <div class="data-science course">
+          <img src="/asset/mockups/mockup-data-science.svg" alt="Data Science career card mockup">
+        </div>
+        </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
