create mission section

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </ol>
       </nav>
     </header>
-    <section class="hero-section container">
+    <section aria-labelledby="hero-title" class="hero-section container flex">
       <div class="hero-section__content">
-        <h1 class="hero-section__h1">Are you a final year student?</h1>
+        <h1 id="hero-title" class="hero-section__h1">Are you a final year student?</h1>
         <p>We know the pressure to succeed is intense, so we are here to 
           alleivate some of that pressure by helping you choose a career 
           path suited for you</p>
@@ -57,6 +57,37 @@
         </div>
         </div>
     </section>
+    <main class="mission container flex">
+      <h2 class="mission__title">we are committed to...</h2>
+      <section class="mission__content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Duis aliquam pretium lacus vulputate rhoncus. Vestibulum ac felis augue. 
+          Donec interdum lacus eget ante maximus congue. </p>
+      </section>
+      <ol class="mission__list">
+        <li class="mission__list__item container flex">
+          <span class="number">1</span>
+          <div>
+            <h3 class="body-intro-text">Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          </div>
+        </li>
+        <li class="mission__list__item container flex">
+          <span class="number">1</span>
+          <div>
+            <h3 class="body-intro-text">Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          </div>
+        </li>
+        <li class="mission__list__item container flex">
+          <span class="number">1</span>
+          <div>
+            <h3 class="body-intro-text">Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          </div>
+        </li>
+      </ol>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
