create about, cta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Career Guidance</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -29,65 +32,132 @@
           <li class="menu-list__item"><a href="#">Results</a></li>
           <li class="menu-list__item"><a href="#">Careers</a></li>
           <li class="menu-list__item btn"><a href="#">Take test</a></li>
-        </ol>
+        </ul>
       </nav>
     </header>
     <section aria-labelledby="hero-title" class="hero-section container flex">
       <div class="hero-section__content">
-        <h1 id="hero-title" class="hero-section__h1">Are you a final year student?</h1>
-        <p>We know the pressure to succeed is intense, so we are here to 
-          alleivate some of that pressure by helping you choose a career 
-          path suited for you</p>
+        <h1 id="hero-title" class="hero-section__h1">
+          Are you a final year student?
+        </h1>
+        <p>
+          We know the pressure to succeed is intense, so we are here to
+          alleivate some of that pressure by helping you choose a career path
+          suited for you
+        </p>
       </div>
       <div class="hero-section__images">
         <div class="question-image">
-          <img src="/asset/mockups/mockup-question.svg" alt="question and radio buttons answer mockup design"/>
+          <img
+            src="/asset/mockups/mockup-question.svg"
+            alt="question and radio buttons answer mockup design"
+          />
         </div>
         <div class="personality-type-1">
-          <img src="/asset/mockups/mockup-personality-type-1.svg" alt="The logician personality type card">
+          <img
+            src="/asset/mockups/mockup-personality-type-1.svg"
+            alt="The logician personality type card"
+          />
         </div>
         <div class="personality-type-2">
-          <img src="/asset/mockups/mockup-personality-type-2.svg" alt="The architect personality type card">
+          <img
+            src="/asset/mockups/mockup-personality-type-2.svg"
+            alt="The architect personality type card"
+          />
         </div>
         <div class="mechatronics course">
-          <img src="/asset/mockups/mockup-mechatronics.svg" alt="Mechatronics career card mockup">
+          <img
+            src="/asset/mockups/mockup-mechatronics.svg"
+            alt="Mechatronics career card mockup"
+          />
         </div>
         <div class="data-science course">
-          <img src="/asset/mockups/mockup-data-science.svg" alt="Data Science career card mockup">
+          <img
+            src="/asset/mockups/mockup-data-science.svg"
+            alt="Data Science career card mockup"
+          />
         </div>
-        </div>
+      </div>
     </section>
     <main class="mission container flex">
       <h2 class="mission__title">we are committed to...</h2>
       <section class="mission__content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Duis aliquam pretium lacus vulputate rhoncus. Vestibulum ac felis augue. 
-          Donec interdum lacus eget ante maximus congue. </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquam
+          pretium lacus vulputate rhoncus. Vestibulum ac felis augue. Donec
+          interdum lacus eget ante maximus congue.
+        </p>
       </section>
       <ol class="mission__list">
         <li class="mission__list__item container flex">
           <span class="number">1</span>
-          <div>
+          <article class="mission">
             <h3 class="body-intro-text">Lorem Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-          </div>
+          </article>
         </li>
         <li class="mission__list__item container flex">
           <span class="number">1</span>
-          <div>
+          <article class="mission">
             <h3 class="body-intro-text">Lorem Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-          </div>
+          </article>
         </li>
         <li class="mission__list__item container flex">
           <span class="number">1</span>
-          <div>
+          <article class="mission">
             <h3 class="body-intro-text">Lorem Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-          </div>
+          </article>
         </li>
       </ol>
     </main>
+    <section aria-labelledby="about-us" class="about container">
+      <h2 id="about-us">About</h2>
+      <p class="about__paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquam
+        pretium lacus vulputate rhoncus. Vestibulum ac felis augue. Donec
+        interdum lacus eget ante maximus congue. Quisque ante elit, accumsan ac
+        lacus eget, tempus porttitor tellus. Nullam quis mi at risus pretium
+        finibus. Curabitur posuere erat eget nulla tempor lobortis. Aliquam
+        pellentesque, mi ac rutrum euismod, velit sapien iaculis leo, non
+        ullamcorper diam velit quis est.
+      </p>
+      <p class="about__paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquam
+        pretium lacus vulputate rhoncus. Vestibulum ac felis augue. Donec
+        interdum lacus eget ante maximus congue. Quisque ante elit, accumsan ac
+        lacus eget, tempus porttitor tellus. Nullam quis mi at risus pretium
+        finibus. Curabitur posuere erat eget nulla tempor lobortis. Aliquam
+        pellentesque, mi ac rutrum euismod, velit sapien iaculis leo, non
+        ullamcorper diam velit quis est.
+      </p>
+      <p class="about__paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquam
+        pretium lacus vulputate rhoncus. Vestibulum ac felis augue. Donec
+        interdum lacus eget ante maximus congue. Quisque ante elit, accumsan ac
+        lacus eget, tempus porttitor tellus. Nullam quis mi at risus pretium
+        finibus. Curabitur posuere erat eget nulla tempor lobortis. Aliquam
+        pellentesque, mi ac rutrum euismod, velit sapien iaculis leo, non
+        ullamcorper diam velit quis est.
+      </p>
+    </section>
+    <section aria-labelledby="CTA-title" class="CTA-section container flex">
+      <h3 id="CTA-title">Take test now</h3>
+      <p>
+        Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat
+      </p>
+      <button class="btn CTA__btn">Take Test</button>
+      <img
+        class="CTA-section__image"
+        src="/asset/mockups/mockup-career.svg"
+        alt="mockup career details"
+      />
+    </section>
+    <section class="container">
+      <h2>How it works</h2>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
