create how does it work, edit stylesheet

--- a/index.html
+++ b/index.html
@@ -155,8 +155,55 @@
         alt="mockup career details"
       />
     </section>
-    <section class="container">
-      <h2>How it works</h2>
+    <section aria-labelledby="how-it-works" class="guide container flex">
+      <h2 id="how-it-works" class="guide__title">How it works</h2>
+      <p class="guide__info__text">
+        Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat
+      </p>
+      <div class="guide__path">
+        <div class="guide__path__lines">
+          <div class="circle"></div>
+          <div class="line"></div>
+        </div>
+        <div class="guide__path__lines">
+          <div class="circle"></div>
+          <div class="line"></div>
+        </div>
+        <article class="guide__path__info container">
+          <h3 class="body-intro-text">INPUT YOUR ACADEMIC SCORE</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore
+          </p>
+        </article>
+        <div class="guide__path__lines">
+          <div class="circle"></div>
+          <div class="line"></div>
+        </div>
+        <article class="guide__path__info container">
+          <h3 class="body-intro-text">TAKE THE PERSONALITY TYPE TEST</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam
+          </p>
+        </article>
+        <div class="guide__path__lines">
+          <div class="circle"></div>
+          <div class="line"></div>
+        </div>
+        <article class="guide__path__info container">
+          <h3 class="body-intro-text">GET RESULTS</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore
+          </p>
+        </article>
+        <div class="guide__path__lines">
+          <div class="circle"></div>
+        </div>
+      </div>
     </section>
     <script src="script.js"></script>
   </body>
