--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <header class="header container">
-      <nav>
+    <!-- <div class="cursor"></div> -->
+    <header class="header">
+      <nav class="flex">
         <a href="#" class="logo">CAREER GUIDANCE</a>
         <a href="#" class="header-menu">
           <span class="line"></span>
@@ -31,12 +32,18 @@
           <li class="menu-list__item"><a href="#">About</a></li>
           <li class="menu-list__item"><a href="#">Results</a></li>
           <li class="menu-list__item"><a href="#">Careers</a></li>
-          <li class="menu-list__item btn"><a href="#">Take test</a></li>
+          <li class="menu-list__item">
+            <a href="/assessment.html">Take test</a>
+          </li>
+          <li class="menu-list__item desktop-search">
+            <input type="text" name="search" placeholder="Search course..." />
+            <img src="/asset/ei_search.svg" alt="search icon" />
+          </li>
         </ul>
       </nav>
     </header>
-    <section aria-labelledby="hero-title" class="hero-section container flex">
-      <div class="hero-section__content">
+    <section aria-labelledby="hero-title" class="hero-section flex">
+      <div class="hero-section__content flex">
         <h1 id="hero-title" class="hero-section__h1">
           Are you a final year student?
         </h1>
@@ -45,41 +52,45 @@
           alleivate some of that pressure by helping you choose a career path
           suited for you
         </p>
+        <a class="btn cta--btn flex" href="/assessment.html"
+          >Proceed to Take test
+          <!-- <div class="arrow-svg"></div> -->
+        </a>
       </div>
-      <div class="hero-section__images">
-        <div class="question-image">
+      <div class="hero-section__mockups">
+        <div class="page-image">
           <img
-            src="/asset/mockups/mockup-question.svg"
+            src="/asset/desktop.svg"
             alt="question and radio buttons answer mockup design"
           />
         </div>
         <div class="personality-type-1">
           <img
-            src="/asset/mockups/mockup-personality-type-1.svg"
+            src="/asset/the-logician.svg"
             alt="The logician personality type card"
           />
         </div>
         <div class="personality-type-2">
           <img
-            src="/asset/mockups/mockup-personality-type-2.svg"
+            src="/asset/the-architect.svg"
             alt="The architect personality type card"
           />
         </div>
         <div class="mechatronics course">
           <img
-            src="/asset/mockups/mockup-mechatronics.svg"
+            src="/asset/mechatronics.svg"
             alt="Mechatronics career card mockup"
           />
         </div>
         <div class="data-science course">
           <img
-            src="/asset/mockups/mockup-data-science.svg"
+            src="/asset/data-science.svg"
             alt="Data Science career card mockup"
           />
         </div>
       </div>
     </section>
-    <main class="mission container flex">
+    <main class="mission flex">
       <h2 class="mission__title">we are committed to...</h2>
       <section class="mission__content">
         <p>
@@ -88,31 +99,31 @@
           interdum lacus eget ante maximus congue.
         </p>
       </section>
-      <ol class="mission__list">
-        <li class="mission__list__item container flex">
-          <span class="number">1</span>
-          <article class="mission">
+      <ol class="list">
+        <li class="card flex">
+          <span class="card__number">1</span>
+          <article class="card__info">
             <h3 class="body-intro-text">Lorem Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
           </article>
         </li>
-        <li class="mission__list__item container flex">
-          <span class="number">1</span>
-          <article class="mission">
+        <li class="card flex">
+          <span class="card__number">1</span>
+          <article class="card__info">
             <h3 class="body-intro-text">Lorem Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
           </article>
         </li>
-        <li class="mission__list__item container flex">
-          <span class="number">1</span>
-          <article class="mission">
+        <li class="card flex">
+          <span class="card__number">1</span>
+          <article class="card__info">
             <h3 class="body-intro-text">Lorem Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
           </article>
         </li>
       </ol>
     </main>
-    <section aria-labelledby="about-us" class="about container">
+    <section aria-labelledby="about-us" class="about">
       <h2 id="about-us">About</h2>
       <p class="about__paragraph">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquam
@@ -148,14 +159,19 @@
         Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat
       </p>
-      <button class="btn CTA__btn">Take Test</button>
+      <!-- <button class="btn CTA__btn"> -->
+      <a class="btn CTA__btn" href="/assessment.html">Take Test</a>
+      <!-- </button> -->
       <img
         class="CTA-section__image"
         src="/asset/mockups/mockup-career.svg"
         alt="mockup career details"
       />
     </section>
-    <section aria-labelledby="how-it-works" class="guide container flex">
+    <section
+      aria-labelledby="how-it-works"
+      class="guide container flex flex-fd-c"
+    >
       <h2 id="how-it-works" class="guide__title">How it works</h2>
       <p class="guide__info__text">
         Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -164,13 +180,13 @@
       <div class="guide__path">
         <div class="guide__path__lines">
           <div class="circle"></div>
-          <div class="line"></div>
+          <div class="line"><span class="filled-line"></span></div>
         </div>
         <div class="guide__path__lines">
           <div class="circle"></div>
-          <div class="line"></div>
+          <div class="line"><span class="filled-line"></span></div>
         </div>
-        <article class="guide__path__info container">
+        <article class="card">
           <h3 class="body-intro-text">INPUT YOUR ACADEMIC SCORE</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -179,9 +195,9 @@
         </article>
         <div class="guide__path__lines">
           <div class="circle"></div>
-          <div class="line"></div>
+          <div class="line"><span class="filled-line"></span></div>
         </div>
-        <article class="guide__path__info container">
+        <article class="card">
           <h3 class="body-intro-text">TAKE THE PERSONALITY TYPE TEST</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -191,9 +207,9 @@
         </article>
         <div class="guide__path__lines">
           <div class="circle"></div>
-          <div class="line"></div>
+          <div class="line"><span class="filled-line"></span></div>
         </div>
-        <article class="guide__path__info container">
+        <article class="guide__path__info card">
           <h3 class="body-intro-text">GET RESULTS</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -205,6 +221,7 @@
         </div>
       </div>
     </section>
-    <script src="script.js"></script>
+    <footer></footer>
+    <script src="/app/js/script.js"></script>
   </body>
 </html>
