create results page

--- a/assessment.html
+++ b/assessment.html
@@ -106,10 +106,12 @@
               alt="go to next question arrow"
             />
           </button>
+          <a href="/results.html" class="btn--get-results">Get Results</a>
         </div>
       </section>
     </main>
     <footer></footer>
+    <script src="/app/js/index.js"></script>
     <script type="module" src="/app/js/script.js"></script>
   </body>
 </html>
