--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="menu-list__item"><a href="#">Results</a></li>
           <li class="menu-list__item"><a href="#">Careers</a></li>
           <li class="menu-list__item">
-            <a href="/assessment.html">Take test</a>
+            <a>Take test</a>
           </li>
           <li class="menu-list__item desktop-search">
             <input type="text" name="search" placeholder="Search course..." />
@@ -52,7 +52,7 @@
           alleivate some of that pressure by helping you choose a career path
           suited for you
         </p>
-        <a class="btn cta--btn flex" href="/assessment.html"
+        <a class="btn cta--btn flex"
           >Proceed to Take test
           <!-- <div class="arrow-svg"></div> -->
         </a>
@@ -160,7 +160,7 @@
         consequat
       </p>
       <!-- <button class="btn CTA__btn"> -->
-      <a class="btn CTA__btn" href="/assessment.html">Take Test</a>
+      <a class="btn CTA__btn">Take Test</a>
       <!-- </button> -->
       <img
         class="CTA-section__image"
@@ -222,6 +222,6 @@
       </div>
     </section>
     <footer></footer>
-    <script src="/app/js/script.js"></script>
+    <script src="/app/js/index.js"></script>
   </body>
 </html>
