--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- <div class="cursor"></div> -->
@@ -24,7 +24,7 @@
         <form class="search">
           <input type="text" name="search" placeholder="Search course..." />
           <button class="search__btn">
-            <img src="/asset/ei_search.svg" alt="search icon" />
+            <img src="./asset/ei_search.svg" alt="search icon" />
           </button>
         </form>
 
@@ -37,7 +37,7 @@
           </li>
           <li class="menu-list__item desktop-search">
             <input type="text" name="search" placeholder="Search course..." />
-            <img src="/asset/ei_search.svg" alt="search icon" />
+            <img src="./asset/ei_search.svg" alt="search icon" />
           </li>
         </ul>
       </nav>
@@ -60,31 +60,31 @@
       <div class="hero-section__mockups">
         <div class="page-image">
           <img
-            src="/asset/desktop.svg"
+            src="./asset/desktop.svg"
             alt="question and radio buttons answer mockup design"
           />
         </div>
         <div class="personality-type-1">
           <img
-            src="/asset/the-logician.svg"
+            src="./asset/the-logician.svg"
             alt="The logician personality type card"
           />
         </div>
         <div class="personality-type-2">
           <img
-            src="/asset/the-architect.svg"
+            src="./asset/the-architect.svg"
             alt="The architect personality type card"
           />
         </div>
         <div class="mechatronics course">
           <img
-            src="/asset/mechatronics.svg"
+            src="./asset/mechatronics.svg"
             alt="Mechatronics career card mockup"
           />
         </div>
         <div class="data-science course">
           <img
-            src="/asset/data-science.svg"
+            src="./asset/data-science.svg"
             alt="Data Science career card mockup"
           />
         </div>
@@ -164,7 +164,7 @@
       <!-- </button> -->
       <img
         class="CTA-section__image"
-        src="/asset/mockups/mockup-career.svg"
+        src="./asset/mockups/mockup-career.svg"
         alt="mockup career details"
       />
     </section>
@@ -222,6 +222,6 @@
       </div>
     </section>
     <footer></footer>
-    <script src="/app/js/index.js"></script>
+    <script src="./app/js/index.js"></script>
   </body>
 </html>
