interage search functionality

--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
           <span class="line"></span>
         </a>
         <form class="search">
-          <input type="text" name="search" placeholder="Search course..." />
+          <!-- <input type="text" name="search" placeholder="Search course..." />
           <button class="search__btn">
             <img src="./asset/ei_search.svg" alt="search icon" />
-          </button>
+          </button> -->
+          <div class="search__input">
+            <input type="text" name="search" placeholder="Search course..." />
+            <button class="search__btn">
+              <img src="./asset/ei_search.svg" alt="search icon" />
+            </button>
+          </div>
+          <ul class="search__result list"></ul>
         </form>
 
         <ul class="menu-list">
