--- a/assessment.html
+++ b/assessment.html
@@ -72,23 +72,23 @@
         <p class="body-intro-text question"></p>
         <ul class="radio-group">
           <li class="radio-group__item flex">
-            <input type="radio" name="answer" id="option-1" value="very good" />
+            <input type="radio" name="answer" id="option-1" value="5" />
             <label for="option-1">Very Good</label>
           </li>
           <li class="radio-group__item flex">
-            <input type="radio" name="answer" id="option-2" value="good" />
+            <input type="radio" name="answer" id="option-2" value="4" />
             <label for="option-2">Good</label>
           </li>
           <li class="radio-group__item flex">
-            <input type="radio" name="answer" id="option-3" value="average" />
+            <input type="radio" name="answer" id="option-3" value="3" />
             <label for="option-3">Average</label>
           </li>
           <li class="radio-group__item flex">
-            <input type="radio" name="answer" id="option-4" value="bad" />
+            <input type="radio" name="answer" id="option-4" value="2" />
             <label for="option-4">Bad</label>
           </li>
           <li class="radio-group__item flex">
-            <input type="radio" name="answer" id="option-5" value="very bad" />
+            <input type="radio" name="answer" id="option-5" value="1" />
             <label for="option-5">Very Bad</label>
           </li>
         </ul>
