--- a/results.html
+++ b/results.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Career Guidance</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <header class="header">
+      <nav class="flex">
+        <a href="#" class="logo">CAREER GUIDANCE</a>
+        <a href="#" class="header-menu">
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
+        </a>
+        <form class="search">
+          <input type="text" name="search" placeholder="Search course..." />
+          <button class="search__btn">
+            <img src="./asset/ei_search.svg" alt="search icon" />
+          </button>
+        </form>
+
+        <ul class="menu-list">
+          <li class="menu-list__item"><a href="#">About</a></li>
+          <li class="menu-list__item"><a href="#">Results</a></li>
+          <li class="menu-list__item"><a href="#">Careers</a></li>
+          <li class="menu-list__item">
+            <a>Take test</a>
+          </li>
+          <li class="menu-list__item desktop-search">
+            <input type="text" name="search" placeholder="Search course..." />
+            <img src="./asset/ei_search.svg" alt="search icon" />
+          </li>
+        </ul>
+      </nav>
+    </header>
     <div class="anneyong">Anneyong</div>
     <h1></h1>
     <h2></h2>
-
+    <script src="./app/js/index.js"></script>
     <script src="/app/js/result.js"></script>
   </body>
 </html>
