add functionality to search input

--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
     <!-- <div class="cursor"></div> -->
     <header class="header">
       <nav class="flex">
-        <a href="#" class="logo">CAREER GUIDANCE</a>
+        <a href="/" class="logo">CAREER GUIDANCE</a>
         <a href="#" class="header-menu">
           <span class="line"></span>
           <span class="line"></span>
           <span class="line"></span>
         </a>
         <form class="search">
-          <!-- <input type="text" name="search" placeholder="Search course..." />
-          <button class="search__btn">
-            <img src="./asset/ei_search.svg" alt="search icon" />
-          </button> -->
           <div class="search__input">
             <input type="text" name="search" placeholder="Search course..." />
             <button class="search__btn">
@@ -47,6 +43,9 @@
             <img src="./asset/ei_search.svg" alt="search icon" />
           </li>
         </ul>
+      </nav>
+      <nav>
+        <ul class="search__result--desktop list"></ul>
       </nav>
     </header>
     <section aria-labelledby="hero-title" class="hero-section flex">
