--- a/courses.html
+++ b/courses.html
@@ -47,11 +47,46 @@
         <ul class="search__result--desktop list"></ul>
       </nav>
     </header>
-
-    <div class="anneyong">Anneyong</div>
-    <h1></h1>
-    <h2></h2>
+    <section
+      aria-labelledby="all-courses"
+      class="all-courses__introduction container flex"
+    >
+      <div class="all-courses__introduction__content flex">
+        <h1 id="all-courses">All Courses</h1>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          readable ore-or-less normal distribution of letters,
+        </p>
+      </div>
+      <div class="all-courses__introduction__search">
+        <input type="text" name="search" placeholder="Search course..." />
+        <img src="./asset/ei_search.svg" alt="search icon" />
+      </div>
+    </section>
+    <main class="all-course-list container"></main>
+    <section class="container" aria-label="pagination">
+      <div class="pagination flex">
+        <button class="btn--flat pagination__btn--prev">
+          <img
+            src="./asset/ant-design_arrow-left-outlined.svg"
+            alt="Arrow left outline"
+          />
+          <span class="medium-text">PREV</span>
+        </button>
+        <div>
+          <button class="btn--flat pagination__btn--number" value="0">1</button>
+          <button class="btn--flat pagination__btn--number" value="9">2</button>
+        </div>
+        <button class="btn--flat pagination__btn--next">
+          <span class="medium-text">NEXT</span>
+          <img
+            src="./asset/arrow-right-white-outline.svg"
+            alt="arrow right outline"
+          />
+        </button>
+      </div>
+    </section>
     <script src="./app/js/index.js"></script>
-    <script src="/app/js/result.js"></script>
+    <script src="./app/js/courses.js"></script>
   </body>
 </html>
