create courses page, loading script and debounce function

--- a/courses.html
+++ b/courses.html
@@ -32,8 +32,8 @@
 
         <ul class="menu-list">
           <li class="menu-list__item"><a href="#">About</a></li>
-          <li class="menu-list__item"><a href="#">Results</a></li>
-          <li class="menu-list__item"><a href="#">Careers</a></li>
+          <li class="menu-list__item"><a href="/results.html">Results</a></li>
+          <li class="menu-list__item"><a href="/courses.html">Courses</a></li>
           <li class="menu-list__item">
             <a>Take test</a>
           </li>
@@ -63,7 +63,7 @@
         <img src="./asset/ei_search.svg" alt="search icon" />
       </div>
     </section>
-    <main class="all-course-list container"></main>
+    <main class="all-courses-list container"></main>
     <section class="container" aria-label="pagination">
       <div class="pagination flex">
         <button class="btn--flat pagination__btn--prev">
@@ -87,6 +87,6 @@
       </div>
     </section>
     <script src="./app/js/index.js"></script>
-    <script src="./app/js/courses.js"></script>
+    <script type="module" src="./app/js/courses.js"></script>
   </body>
 </html>
