--- a/results.html
+++ b/results.html
@@ -32,8 +32,8 @@
 
         <ul class="menu-list">
           <li class="menu-list__item"><a href="#">About</a></li>
-          <li class="menu-list__item"><a href="#">Results</a></li>
-          <li class="menu-list__item"><a href="#">Careers</a></li>
+          <li class="menu-list__item"><a href="/results.html">Results</a></li>
+          <li class="menu-list__item"><a href="/courses.html">Courses</a></li>
           <li class="menu-list__item">
             <a>Take test</a>
           </li>
@@ -47,10 +47,18 @@
         <ul class="search__result--desktop list"></ul>
       </nav>
     </header>
-
+    <section
+      class="results__introduction container flex flex-fd-c"
+      aria-labelledby="your-result"
+    >
+      <h1 id="your-result">Your Result</h1>
+      <p>
+        It is a long established fact that a reader will be distracted by the
+        readable ore-or-less normal distribution of letters,
+      </p>
+    </section>
     <div class="anneyong">Anneyong</div>
-    <h1></h1>
-    <h2></h2>
+
     <script src="./app/js/index.js"></script>
     <script src="/app/js/result.js"></script>
   </body>
